src/main/java/org/example/newsfeedteamproject/global/error/ErrorCode.java
package org.example.newsfeedteamproject.global.error;
import org.springframework.http.HttpStatus;


public interface ErrorCode {
    HttpStatus gethttpStatus();
    String getMessage();
}
